--- a/templates/home.html
+++ b/templates/home.html
@@ -29,4 +29,5 @@
  {{pred}}
 
 </body>
+<footer> Created by <a href="https://www.linkedin.com/in/daniel-querales/">Daniel Querales</a></footer>
 </html>
