--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
  
  <div>{{prediction_text}}</div>
  
- <div>Created by <a href="https://www.linkedin.com/in/daniel-querales/">Daniel Querales</a></div>
+ <footer>Created by <a href="https://www.linkedin.com/in/daniel-querales/">Daniel Querales</a></footer>
 
 </body>
 </html>
