--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@
 
 * { -webkit-box-sizing:border-box; -moz-box-sizing:border-box; -ms-box-sizing:border-box; -o-box-sizing:border-box; box-sizing:border-box; }
 
-html { -webkit-text-size-adjust: 100%; width: 100%; height:100%; overflow:hidden;}
+html { width: 100%; height:100%; overflow:hidden; }
 
 body { 
 	width: 100%;
@@ -31,9 +31,6 @@ body {
 
 }
 .login { 
-	position: relative;
-	top: 40%;
-	left: 50%;
 	margin: -150px 0 0 -150px;
 	width:400px;
 	height:400px;
