--- a/templates/home.html
+++ b/templates/home.html
@@ -19,9 +19,10 @@
     	<input type="text" name="Review" placeholder="Review" required="required" /><br>
       <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
+    <br>
+    <br>
+    <b> {{ prediction_text }} </b>
  </div>
- 
- <div>{{prediction_text}}</div>
  
  <footer> Created by <a href="https://www.linkedin.com/in/daniel-querales/">Daniel Querales</a></footer>
 
