--- a/static/style.css
+++ b/static/style.css
@@ -31,11 +31,11 @@ body {
 
 }
 .login { 
-	position: absolute;
+	position: relative;
 	top: 40%;
-	left: 50%;
+	
 	margin: -150px 0 0 -150px;
-	width:400px;
+	width:100%;
 	height:400px;
 }
 
