--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,7 @@ body {
 .login { 
 	position: relative;
 	top: 40%;
-	
+	left:20%;
 	margin: -150px 0 0 -150px;
 	width:100%;
 	height:400px;
@@ -42,7 +42,7 @@ body {
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 input { 
-	width: 100%; 
+	width: 70%; 
 	margin-bottom: 10px; 
 	background: rgba(0,0,0,0.3);
 	border: none;
