revert to scale fix

--- a/static/style.css
+++ b/static/style.css
@@ -31,18 +31,18 @@ body {
 
 }
 .login { 
-	position: relative;
+	position: absolute;
 	top: 40%;
-	left:20%;
+	left: 50%;
 	margin: -150px 0 0 -150px;
-	width:100%;
+	width:400px;
 	height:400px;
 }
 
 .login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
 
 input { 
-	width: 70%; 
+	width: 100%; 
 	margin-bottom: 10px; 
 	background: rgba(0,0,0,0.3);
 	border: none;
